Added production step api/controller/shell for tests
